AX: aria-label does not override text content on iOS https://bugs.webkit.org/show_bug.cgi?id=111222

Reviewed by David Kilzer.

Source/WebCore:

Make iOS use the same text alternative computation that Mac is using. The main difference
is that description and title need to be concatenated, because iOS doesn't have two attributes
to return those values.

Test: platform/iphone-simulator/accessibility/aria-label-with-internal-text.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper stringValueShouldBeUsedInLabel]):
(-[WebAccessibilityObjectWrapper accessibilityLabel]):
(-[WebAccessibilityObjectWrapper accessibilityHint]):
* accessibility/mac/WebAccessibilityObjectWrapperBase.h:

LayoutTests:

* platform/iphone-simulator/accessibility/aria-label-with-internal-text-expected.txt: Added.
* platform/iphone-simulator/accessibility/aria-label-with-internal-text.html: Added.



Canonical link: https://commits.webkit.org/129797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144766 268f45cc-cd09-0410-ab3c-d52691b4dbfc